HW2 Basic + Optional

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,15 @@
 <ul>
     <li><a href="users">User List</a></li>
     <li><a href="meals">Meal List</a></li>
+
+    <form action="users" method="post">
+        <p><select name="userId" size="1">
+            <option value="1">user1</option>
+            <option value="2">user2</option>
+        </select></p>
+        <p><input type="submit" value="Выбрать"></p>
+    </form>
+
 </ul>
 </body>
 </html>
