--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
     <li><a href="users">User List</a></li>
     <li><a href="meals">Meal List</a></li>
 
-    <form action="users" method="post">
+    <form action="meals" method="post">
         <p><select name="userId" size="1">
             <option value="1">user1</option>
             <option value="2">user2</option>
